# cuenv

./: .bazelrc  .gitignore  AGENTS.md  BUCK2_CACHE_IMPLEMENTATION.md  BUILD.bazel  CACHE_PHASE1_SUMMARY.md  CACHE_PLAN.md  CACHE_PROGRESS.md  CHANGELOG.md  CLAUDE.md  COMPLETION.md  CONTRIBUTING.md  CUE_PARSER_REFACTORING_COMPLETE.md  Cargo.toml  GEMINI.md  IMPROVEMENT_PLAN.md  LANDLOCK_PRODUCTION_CHECKLIST.md  LICENSE  MONITORING_IMPLEMENTATION.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE8_TESTING_VALIDATION.md  README.md  STATE_REFACTORING_SUMMARY.md  TEST_ANALYSIS.md  TEST_IMPROVEMENTS.md  TODO.md  WORKSPACE.bazel  build.rs  cache_architecture_design.md  cache_configuration_schema.md  cliff.toml  cuenv-task-run.dag.txt  cuenv-task-run.trace.json  debug_nix_env.sh  debug_nix_env2.sh  env.cue  flake-cross.nix  (+11 more)
crates/cache/: Cargo.toml
crates/cache/src/: bridge.rs  cleanup.rs  config.rs  content_addressed_store.rs  core.rs  engine.rs  entry.rs  errors.rs  errors_old.rs  eviction.rs  fast_path.rs  hashing.rs  health_endpoint.rs  item.rs  keys.rs  lib.rs  manager.rs  memory_manager.rs  mod.rs  mode.rs  monitored.rs  monitoring.rs  performance.rs  serialization.rs  storage.rs  streaming.rs  traits.rs  types.rs  warming.rs
crates/cache/src/concurrent/: action.rs  mod.rs
crates/cache/src/core/: builder.rs  mod.rs  paths.rs  trait_impl.rs  types.rs
crates/cache/src/errors/: conversions.rs  display.rs  recovery.rs  security.rs  types.rs
crates/cache/src/eviction/: factory.rs  mod.rs  tests.rs  traits.rs
crates/cache/src/fast-path/: batch.rs  core.rs  inline.rs  mod.rs  specialized.rs  tests.rs
crates/cache/src/health/: mod.rs
crates/cache/src/keys/: mod.rs
crates/cache/src/manager/: builder.rs  keygen.rs  migration.rs  mod.rs  operations.rs  statistics.rs
crates/cache/src/metrics/: calculation.rs  collection.rs  core.rs  endpoint.rs  mod.rs  snapshot.rs  tests.rs
crates/cache/src/monitoring/: mod.rs  monitor.rs  traced.rs  types.rs
crates/cache/src/performance/: alignment.rs  batch.rs  hints.rs  memory.rs  mod.rs  simd.rs  stats.rs
crates/cache/src/security/: audit.rs  capabilities.rs  merkle.rs  secure.rs  signing.rs
crates/cache/src/storage/: compression.rs  format.rs  mod.rs  tests.rs  transaction.rs
crates/cache/src/streaming/: finalization.rs  mod.rs  operations.rs  path_utils.rs  reader.rs  tests.rs  writer.rs
crates/cache/src/warming/: candidates.rs  core.rs  mod.rs  patterns.rs  tests.rs  tracker.rs  types.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: async_runtime.rs  completion.rs  directory.rs  execute.rs  lib.rs  main.rs  monorepo.rs  secrets.rs
crates/cli/src/commands/: exec.rs  init.rs  mcp.rs  mod.rs
crates/cli/src/completion/: mod.rs
crates/cli/src/discovery/: mod.rs
crates/cli/src/formatters/: mod.rs  spinner.rs  tui.rs
crates/cli/src/platform/: mod.rs  unix.rs  windows.rs
crates/cli/src/secrets/: manager.rs  mod.rs  resolver.rs  tests.rs
crates/cli/tests/: background_source_hooks.rs  env_lifecycle_tests.rs  hooks_preload_test.rs  property_tests.rs  secure_task_behavior_test.rs  shell_integration_tests.rs  snapshots.rs  test_examples.rs
crates/cli/tests/common/: mod.rs  test_isolation.rs
crates/config/: Cargo.toml
crates/config/src/: cache.rs  config.rs  config_tests.rs  lib.rs  loader.rs  mod.rs  parser.rs
crates/config/src/parser/: field_ordering_test.rs  mod.rs  processing.rs  tests.rs  validation.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/testing/: mod.txt
crates/core/src/: constants.rs  errors.rs  events.rs  lib.rs  types.rs
crates/core/src/errors/: builders.rs  conversions.rs  display.rs  extensions.rs  mod.rs  transformations.rs  types.rs
crates/core/src/events/: console.rs  json_log.rs  metrics.rs  mod.rs  utils.rs
crates/core/src/functional/: composition.rs  mod.rs
crates/core/src/testing/: mod.rs
crates/core/src/types/: builders.rs  capabilities.rs  commands.rs  const_validation.rs  environment.rs  files.rs  mod.rs  newtypes.rs  security.rs  shared.rs  state_machines.rs  tasks.rs
crates/env/: Cargo.toml
crates/env/src/: cache.rs  diff.rs  lib.rs  manager.rs  manager_old.rs  source_parser.rs  watcher.rs
crates/env/src/manager/: export.rs  helpers.rs  hooks.rs  mod.rs  secrets.rs  stubs.rs  task.rs  task_impl.rs
crates/env/src/state/: manager.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs  manager.rs  mod.rs  nix_executor.rs
crates/libcue-ffi-bridge/: Cargo.toml  bridge.go  bridge.h  bridge_test.go  build.rs  go.mod
crates/libcue-ffi-bridge/src/: lib.rs
crates/libcue-ffi-bridge/tests/: integration_tests.rs
crates/security/: Cargo.toml
crates/security/src/: access_restrictions.rs  access_restrictions_builder.rs  audit.rs  lib.rs  validator.rs
crates/security/src/dns_filter/: dns_server.rs  mod.rs  namespace.rs  resolver.rs
crates/shell/: Cargo.toml
crates/shell/src/: bash.rs  elvish.rs  fish.rs  lib.rs  mod_shell.rs  shell_hook.rs  zsh.rs
crates/task/: Cargo.toml
crates/task/src/: builder.rs  command_executor.rs  cross_package.rs  definition.rs  executor.rs  executor_tui.rs  lib.rs  mod.rs  protocol.rs  registry.rs  source.rs
crates/task/src/builder/: conversion.rs  dependency.rs  env_expansion.rs  mod.rs  security.rs  validation.rs
crates/task/src/executor/: api.rs  builder.rs  cache.rs  context.rs  dag_cache.rs  graph.rs  management.rs  petgraph_dag.rs  plan.rs  unified_dag.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event_bus.rs  events.rs  fallback.rs  lib.rs  spinner.rs  terminal.rs
crates/utils/: Cargo.toml
crates/utils/src/: async_runtime.rs  atomic_file.rs  directory.rs  directory_lock.rs  hooks_status.rs  lib.rs  limits.rs  memory.rs  paths.rs  xdg.rs
libcue-bridge/: BUILD.bazel  bridge.go  go.mod  go.sum  libcue_bridge.h
src/remote_cache/: BUILD.bazel  action_digest.rs  bazel_server.rs  cache_client.rs  cas_client.rs  client.rs  grpc_proto.rs  mod.rs  remote_execution.proto  remote_executor.rs  sandbox.rs  server.rs  simple_server.rs
(+856 files in other folders)
