[package]
name = "cuenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["environment", "cue", "direnv", "env", "shell"]
categories = ["command-line-utilities", "development-tools", "config"]
description = "A direnv alternative that uses CUE files for environment configuration"

[lints]
workspace = true

[[bin]]
name = "cuenv"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Core functionality
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal crates
cuenv-core = { workspace = true }
cuenv-config = { workspace = true }
cuenv-env = { workspace = true }
cuenv-shell = { workspace = true }
cuenv-task = { workspace = true }
cuenv-cache = { workspace = true }
cuenv-security = { workspace = true }
cuenv-tui = { workspace = true }
cuenv-hooks = { workspace = true }
cuenv-utils = { workspace = true }
cuenv-libcue-ffi-bridge = { workspace = true }

# System
libc = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

# Additional dependencies needed by CLI modules
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }

# Terminal UI
crossterm = { workspace = true }
atty = { workspace = true }

[features]
default = []
nix-build = []

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
cucumber = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
