[package]
name = "cuenv-libcue-ffi-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Go-Rust FFI bridge for CUE evaluation"

[dependencies]
cuenv-core = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cc = "1.0"

[features]
default = []
nix-build = []
