[package]
name = "cuenv-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared utilities and pure functions for cuenv"

[lints]
workspace = true

[dependencies]
cuenv-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
users = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
fs2 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }
sysinfo = { workspace = true }
crossbeam = { workspace = true }
crossterm = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
signal-hook = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
