[package]
name = "cuenv-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared utilities and pure functions for cuenv"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
globset = "0.4.14"
libc = "0.2.155"
nix = { version = "0.29.0", features = ["process", "signal"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
walkdir = "2.5.0"
crossterm = "0.27.0"
base64 = "0.22.1"
cuenv-core = { path = "../core" }
parking_lot = "0.12.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
users = "0.11.0"
fs2 = "0.4.3"
unicode-width = "0.1.13"
rand = "0.8.5"
regex = "1.10.5"
lazy_static = "1.5.0"
log = "0.4.22"
flate2 = "1.0.30"
uuid = { version = "1.10.0", features = ["v4"] }
dashmap = "5.5.3"
once_cell = "1.19.0"
signal-hook = "0.3.17"

[dev-dependencies]
rstest = "0.21.0"
# -- enables testing of internal functions as they are private
